Closed Bug 1707597 Opened 5 years ago Closed 5 years ago

Garbage-collect EventState bits

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox90 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(1 file)

No description provided.

We had about 9 gaps / unused bits. I moved the devtools ones at the end
because I think we should be able to remove them (but separate bug).

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f76d2044d660 Garbage-collect event state bits. r=smaug
Severity: -- → N/A
Priority: -- → P2
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
No longer depends on: 1707584
See Also: → 1707584
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: